Fixed alignment.

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,8 @@ footer {
   text-align: center;
 }
 
+.justify {text-align: justify}
+
 .left-nav {
   background-color: #999999;
 }
